/*
Copyright 2019 vChain, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "google/protobuf/empty.proto";

package schema;

message SetRequest {
	bytes key = 1;
	bytes value = 2;
}

message SetResponse {
	uint64 index = 1;
}

message BatchSetRequest {
	repeated SetRequest setRequests = 1;
}

message GetRequest {
	bytes key = 1;
}

message GetResponse {
	uint64 index = 1;
	bytes value = 2;
}

message BatchGetRequest {
	repeated GetRequest getRequests = 1;
}

message BatchGetResponse {
	repeated GetResponse getResponses = 1;
}

message HealthResponse {
	bool status = 1;
}

service ImmuService {
	rpc Set (SetRequest) returns (SetResponse);
	rpc SetBatch (BatchSetRequest) returns (SetResponse);
	rpc Get (GetRequest) returns (GetResponse);
	rpc GetBatch (BatchGetRequest) returns (BatchGetResponse);
	rpc Health (google.protobuf.Empty) returns (HealthResponse);
}
